Addition of chat app description and links

--- a/index.html
+++ b/index.html
@@ -363,18 +363,18 @@ _________________________________________________________ -->
                                     <img src="img/portfolio-chat.png" class="img-responsive" alt="" />
 
                                     <div class="overlay">
-                                        <h3 class="reference-title">Chat App</h3> 
-                                        <p>Coming Soon!</p>
+                                        <h3 class="reference-title">UIT Chat</h3> 
+                                        <p>A chat room where students can ask questions related to their projects.</p>
                                     </div>
                                 </a>
 
                                 <div class="sr-only reference-description" data-images="img/uit-slider1.jpg">
 
-                                    <p>Description coming soon!</p>
+                                    <p>With the UIT Chat app, you can create channels, and if you can't find a channel fitting your question, you can start a question thread. Check it out!</p>
 
                                     <p class="buttons">
-                                        <a class="btn btn-primary" href="javascript:void(0);"><i class="fa fa-globe"></i> Visit website</a>
-                                        <a class="btn btn-primary" href="javascript:void(0);"><i class="fa fa-download"></i> View GitHub Repo</a>
+                                        <a class="btn btn-primary" href="https://robmyers82.github.io/uitchatapp/" target="_blank"><i class="fa fa-globe"></i> Visit website</a>
+                                        <a class="btn btn-primary" href="https://www.github.com/robmyers82/uitchatapp/" target="_blank"><i class="fa fa-download"></i> View GitHub Repo</a>
                                     </p>
                                 </div>
 
