General website update

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ _________________________________________________________ -->
                                 <img src="img/logo-uit.png" alt="logo" width="130">
                             </div> -->
                             <h1 data-animate="fadeInDown" class="logo">Hey There!</h1>
-                        <h2 data-animate="slideInUp">Do you like code? So do I! Right now my preference is React.js for my UI and Node.js for my server. Let me know what you prefer!</h2>
+                        <h2 data-animate="slideInUp">Do you like code? So do I! Right now my preference is React.js for my UI and Node.js for my server.</h2>
                         </div>
                     </div>
                 </div>
@@ -599,7 +599,8 @@ _________________________________________________________ -->
                     <div class="row">
 
                         <div class="col-md-8 col-md-offset-2">
-                            <form id="contact-form" method="post" action="https://formspree.io/rob@collegio.ca">
+                            <h2 class="title"><a href="mailto:rob@collegio.ca">rob@collegio.ca</a></h2>
+                            <!-- <form id="contact-form" method="post" action="https://formspree.io/rob@collegio.ca">
 
                                 <div class="messages">
 
@@ -629,7 +630,7 @@ _________________________________________________________ -->
                                     </div>
                                 </div>
 
-                            </form>
+                            </form> -->
                         </div>
 
                     </div>
